# pd-for-android

./: .gitignore
PdCore/: build.gradle
PdCore/jni/: CMakeLists.txt
PdTest/: build.gradle
PdTest/jni/: CMakeLists.txt
